# locationless

backend/: .env.example  .gitignore  Cargo.toml  README.md  cloudbuild.yml  latest.sql
backend/data/: citiesInsert.js  city-subset.json  country_continent.csv  seed.sql
backend/migrations/2018-07-17-173341_create_users/: up.sql
backend/migrations/2018-11-08-193101_create_cities/: up.sql
backend/migrations/2018-11-08-194413_create_trips/: up.sql
backend/migrations/2018-11-08-194835_create_friendships/: up.sql
backend/migrations/2018-12-05-043706_create_matches/: down.sql  up.sql
backend/migrations/2018-12-13-234824_fuzzy_search/: down.sql  up.sql
backend/migrations/2019-03-20-111111_remove_city_dupes/: up.sql
backend/ops/: locationless-app.service  locationless.conf
backend/ops/cron/: db_backup
backend/scripts/: deploy.sh  new.sh  new_server.sh  reset_db.sh  reset_test_db.sh  run_on_server.sh
backend/src/: main.rs  schema.patch  schema.rs
backend/src/cities/: mod.rs  models.rs
backend/src/cities/handlers/: lookup.rs  mod.rs
backend/src/explore/: mod.rs  models.rs
backend/src/explore/handlers/: lookup.rs  mod.rs
backend/src/friendships/: mod.rs  models.rs  utils.rs
backend/src/misc/: mod.rs
backend/src/misc/handlers/: status.rs
backend/src/trips/: mod.rs  models.rs
backend/src/trips/handlers/: create.rs  delete.rs  lookup.rs  mod.rs  update.rs
backend/src/users/: middleware.rs  mod.rs  models.rs
backend/src/users/handlers/: auth.rs  mod.rs  (+6 more)
backend/src/util/: database.rs  errors.rs  mod.rs  responses.rs  session.rs  telegram.rs
(+50 files in other folders)
