[package]
name = "backend"
version = "0.1.0"
authors = ["Julian Fell"]

[dependencies]
actix = "0.7"
actix-rt = "0.2.2"
actix-web = "1.0.0"
actix-session = "0.2.0"
actix-web-actors = "1.0.2"
sentry = "0.12"
sentry-actix = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
failure = "0.1.3"
diesel = { version = "1.3.3", features = ["postgres", "chrono", "serde_json", "r2d2"] }
dotenv = "0.13.0"
num_cpus = "1.0"
futures = "0.1.25"
log = "0.4.6"
ring = "0.14.6"
env_logger = "0.5.13"
validator = { version = "0.7.0", features = [] }
validator_derive = "0.7.1"
uuid = { version = "0.7", features = ["v4"] }
telegram-bot-fork = "0.7.8"
telegram-login = "0.2.1"

[profile.release]
lto = true
